# jointly

./: .gitignore  .pre-commit-config.yaml  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.rst  CONTRIBUTORS.rst  HISTORY.rst  LICENSE  Makefile  Pipfile  README.md  README.rst  pyproject.toml  setup.py
.github/: ISSUE_TEMPLATE.md
.github/workflows/: all.yml  black.yml  deploy-test.yml  deploy.yml
docs/: Makefile  background.rst  conf.py  index.rst  installation.rst  make.bat  reference.rst  usage.rst
jointly/: __init__.py  abstract_extractor.py  helpers.py  helpers_plotting.py  log.py  segment_selector.py  shake_extractor.py  synchronization_errors.py  synchronizer.py  types.py
test-data/: faros-internal.parquet  test-data.parquet
tests/: parquet_reader.py  test_examples.py  test_helpers.py  test_helpers_plotting.py  test_jointly.py  test_shake_extractor.py  test_synchronizer.py
