[tool.poetry]
name = "jointly"
version = "0.3.0"
description = "Synchronize sensor data from accelerometer shakes"
authors = [
    "Ariane Morassi Sasso <ariane.morassi-sasso@hpi.de>",
    "Arne Herdick <arne.herdick@student.hpi.de>",
    "Felix Musmann <felix.musmann@student.hpi.de>"
]
license = "MIT"
repository = "https://github.com/hpi-dhc/jointly"
documentation = "https://hpi-dhc.github.io/jointly"
classifiers=[
    'License :: OSI Approved :: MIT License',
    'Programming Language :: Python',
    'Programming Language :: Python :: 3.7',
    'Programming Language :: Python :: 3.8',
    'Programming Language :: Python :: 3.9'
]

[tool.poetry.dependencies]
python = ">=3.7.1,<3.10"
pandas = "^1.3.1"
scipy = "^1.7.1"
numpy = "^1.21.1"
matplotlib = "^3.4.2"

[tool.poetry.dev-dependencies]
pytest = "^6.2.4"
coverage = "^5.5"
sphinx-rtd-theme = "^0.5.2"
black = "^21.7b0"

[build-system]
requires = ["poetry-core>=1.2.0"]
build-backend = "poetry.core.masonry.api"
