[tool.poetry]
name = "jointly"
version = "1.0.4"
description = "Synchronize sensor data from accelerometer shakes"
authors = [
    "Ariane Morassi Sasso <ariane.morassi-sasso@hpi.de>",
    "Arne Herdick <arne.herdick@student.hpi.de>",
    "Felix Musmann <felix.musmann@student.hpi.de>"
]
license = "MIT"
repository = "https://github.com/hpi-dhc/jointly"
documentation = "https://hpi-dhc.github.io/jointly"
classifiers = [
    'License :: OSI Approved :: MIT License',
    'Programming Language :: Python',
    'Programming Language :: Python :: 3.7',
    'Programming Language :: Python :: 3.8',
    'Programming Language :: Python :: 3.9'
]
include = ['*.rst', 'LICENSE', 'tests/*', 'docs/*', '*.jpg', '*.png', '*.gif']
exclude = ['test-data']

[tool.black]
extend-exclude = "^/docs"

[tool.flake8]
max-line-length = 88
extend-ignore = "E203, E266, E501, W503, F403, F401"
max-complexity = 18
select = "B,C,E,F,W,T4,B9"

[tool.poetry.dependencies]
python = ">=3.7.1,<3.10"
pandas = "^1.3.1"
scipy = "^1.7.1"
numpy = "^1.21.1"
matplotlib = "^3.4.2"

[tool.poetry.dev-dependencies]
pytest = "^6.2.4"
coverage = "^5.5"
sphinx-rtd-theme = "^0.5.2"
black = "^21.7b0"
pre-commit = "^2.13.0"
flake8 = "^3.9.2"
pyproject-flake8 = "^0.0.1-alpha.2"
pyarrow = "^5.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
